--- a/app/views/layouts/Admin/admin.html.erb
+++ b/app/views/layouts/Admin/admin.html.erb
@@ -7,8 +7,8 @@
 	<body>
 		<ul>
 			<li><%= link_to 'Dashboard' , admin_root_url%></li>
-			<li><%= link_to 'Users' , admin_users_url%></li>
-			<li><%= link_to 'Stories' , admin_stories_url%></li>
+			<li><%= link_to 'Users' , admin_users_url%>(<%= User.all.size%>)</li>
+			<li><%= link_to 'Stories' , admin_stories_url%> (<%= Story.all.size%>)</li>
 		</ul>
 		</ul>
 		<%= yield %>
