--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,15 @@
      <%= render 'layouts/logo_nav' %>
         
       <!--start: Navigation -->
+     <div class="navbar-start-story">
+       <div class="navbar navbar-inverse">      
+         <ul class="nav">
+          <%= render 'layouts/start_story_link' if current_user%>
+         </ul>
+       </div>
+     </div>
+          
+     
       <div class="navbar-actions">
         <div class="navbar navbar-inverse">
             <div class="navbar-inner">
@@ -29,7 +38,7 @@
                         </li>
                       <%end%>
                       <li class="divider-vertical"></li>
-                      <%= render 'layouts/start_story_link' %>
+                      <%= render 'layouts/start_story_link' , :@enable_class => 'class=hidden-desktop'%>
                       <li class="divider-vertical"></li>
                       <%= render 'layouts/about_dd_menu' %>
                       <li class="divider-vertical"></li>
@@ -83,7 +92,7 @@
   <div class="navbar navbar-inverse">
     <div class="navbar-inner">
       <ul class="nav">
-        <li <%= @everything_active%>><%=link_to 'Everything', general_feed_url %></li>
+        <li <%= @everything_active%>><%=link_to 'All Stories', general_feed_url %></li>
         <li <%= @my_feed_active%>><%=link_to 'My Feed', root_url %></li>
         <%= render 'layouts/start_story_link' %>
       </ul>
