--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,16 +7,7 @@
      <%= render 'layouts/logo_nav' %>
         
       <!--start: Navigation -->
-     <div class="navbar-start-story">
-       <div class="navbar navbar-inverse">      
-         <ul class="nav">
-          <%= render 'layouts/start_story_link' if current_user%>
-         </ul>
-       </div>
-     </div>
-          
-     
-      <div class="navbar-actions">
+       <div class="navbar-actions">
         <div class="navbar navbar-inverse">
             <div class="navbar-inner">
                   <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -80,7 +71,11 @@
         
     </div>
     <!--end: Row -->
-        
+    <% if current_user%>
+        <div class="navbar-start-story">
+         <a class="userFunction btn btn-primary" data-function="startStoryModal" alt="Start a Story" title="Start a Story"><i class="mini-ico-pencil mini-white"></i> <span class="hidden-mini-phones">Start a story</span></a>
+       </div>
+    <% end %>
   </div>
   <!--end: Container-->     
     
