--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -73,7 +73,7 @@
     <!--end: Row -->
     <% if current_user%>
         <div class="navbar-start-story">
-         <a class="userFunction btn btn-primary" data-function="startStoryModal" alt="Start a Story" title="Start a Story"><i class="mini-ico-pencil mini-white"></i> <span class="hidden-mini-phones">Start a story</span></a>
+         <a class="userFunction btn btn-primary" data-function="startStoryModal" alt="Start a Story" title="Start a Story"><i class="mini-ico-pencil mini-white"></i> <span class="hidden-phone">Start a story</span></a>
        </div>
     <% end %>
   </div>
