continue change ui

--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -37,11 +37,17 @@
 	<div class="hp-blocks"	>
 		<div class="container">
 			<div class="anounce">
-				<div>Connect with friends and family to transform your photos into great short stories.</div>
-				<p>
-					<div><!-- Create, Inspire, Share. --></div> 
-			 		<div>Have fun. <span class="last-word">Together</span>.</div>
-			 	</p>
+				<div>FeedFiction is the place to write short stories together with friends.</div>
+
+				<div>Upload a photo from Facebook, Instagram or your Desktop, start writing 
+				a story, and let your friends continue.</div>
+
+
+				<div>FeedFiction is reinventing storytelling in just 55 words.</div>
+
+
+				<div>Sign up with Facebook and start your story.</div>
+				
 			 	<span class="sign-in btn-signin-large"></span>
 		 	</div>
 			
