--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,7 +29,7 @@
                         </li>
                       <%end%>
                       <li class="divider-vertical"></li>
-                      <%= render 'layouts/start_story_link' , :@enable_class => 'class=hidden-desktop'%>
+                      <%= render 'layouts/start_story_link' %>
                       <li class="divider-vertical"></li>
                       <%= render 'layouts/about_dd_menu' %>
                       <li class="divider-vertical"></li>
@@ -71,30 +71,42 @@
         
     </div>
     <!--end: Row -->
-    <% if current_user%>
-        <div class="navbar-start-story">
+    <%# if current_user%>
+        <!-- <div class="navbar-start-story">
          <a class="userFunction btn btn-primary" data-function="startStoryModal" alt="Start a Story" title="Start a Story"><i class="mini-ico-pencil mini-white"></i> <span class="hidden-phone">Start a story</span></a>
-       </div>
-    <% end %>
+       </div> -->
+    <%# end %>
   </div>
   <!--end: Container-->     
     
-
+<div class="second-nav">
+  <div class="container">
+      <ul>
+        <li <%= @everything_active%>><%=link_to 'All Stories', general_feed_url %></li>
+        <li <%= @my_feed_active%>><%=link_to 'My Feed', root_url %></li>
+        
+      </ul>
+      <div class="invite-friends container">
+        <%=link_to 'Invite your friends', '#', class: 'facebook_invitation_link'%>
+        
+      </div>
+  </div>
+</div>
 
 </header>
-<% if current_user%>
-<div class="second-header">
+<%# if current_user%>
+<!-- <div class="second-header">
   <div class="navbar navbar-inverse">
     <div class="navbar-inner">
       <ul class="nav">
-        <li <%= @everything_active%>><%=link_to 'All Stories', general_feed_url %></li>
-        <li <%= @my_feed_active%>><%=link_to 'My Feed', root_url %></li>
-        <%= render 'layouts/start_story_link' %>
+        <li <%#= @everything_active%>><%=link_to 'All Stories', general_feed_url %></li>
+        <li <%#= @my_feed_active%>><%=link_to 'My Feed', root_url %></li>
+        <%#= render 'layouts/start_story_link' %>
       </ul>
     </div>
   </div>
-</div>
-<%end%>
+</div> -->
+<%#end%>
 
 <!--end: Header-->
 <%= yield :home%>
