change ui header

--- a/app/assets/javascripts/feedfiction.js.erb
+++ b/app/assets/javascripts/feedfiction.js.erb
@@ -403,9 +403,24 @@ var feedfiction = {
         });
         
 
-      }
+      },
+     animateHeader : function(){
+      // var images = ['slider1.jpg', 'slider2.jpg', 'slider3.jpg', 'slider4.jpg' , 'slider5.jpg' , 'slider6.jpg' , 'slider7.jpg'];
+      // var i = 0;
 
+      //   setInterval(function(){
+      //       $('.slider-wrapper').fadeTo('slow', 0.5, function() {
+
+      //         $(this).css('background-image', function() {
+      //           if (i >= images.length) {
+      //               i=0;
+      //           }
+      //           return 'url(assets/slider/' + images[i++] + ')'; 
+      //         });
+      //       }).delay(500).fadeTo('slow', 1);
+      //   }, 8000);
     },
+  },
     /*
     *   userFunction - Meant for functions such as blocking users, adding to favorites, etc.
     */
