--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -2,29 +2,26 @@
 <% content_for :home do %>
 <div class="hp-header">
   <div class="slider-wrapper">
-  	<div></div>
+  	<div class="background"></div>
   
-	<!-- 	<div id="da-slider" class="da-slider">
+		<!--<div id="da-slider" class="da-slider">
 			<div class="da-slide">
 				<h2>FeedFiction</h2>
-				<p>Is a cool way to turn your photos into a great short stories together with friends and family.</p>
-				<!-- <a href="#" class="da-link">Read more</a> -->
-				<!--<div class="da-img"><%#= image_tag('parallax-slider/4.png') %></div>
-			</div>
-			<div class="da-slide">
-				<h2>Enjoy & Fun</h2>
-				<p>It's fun, short and sweet. Only 55 word a story.</p>
-				<!-- <a href="#" class="da-link">Read more</a> 
-				<div class="da-img">
-					<%#= image_tag('parallax-slider/responsive.png') %>
+				<p>FeedFiction is the place to write short stories together with friends.</p>
+				
+				<div class="da-img"><%#= image_tag('parallax-slider/4.png') %>
 				</div>
 			</div>
-		<!--	<div class="da-slide">
-				<h2>Write your story!</h2>
-				<p>Choose a photo and start writing.</p>
-				<p>Continue stories or provides the ending for the stories that's almost done..</p>
+			<div class="da-slide">
+				
+				<p>Upload a photo from Facebook, Instagram or your Desktop, start writing 
+				a story, and let your friends continue.</p>
+				
+			</div>
+			<div class="da-slide">
+				<p>FeedFiction is reinventing storytelling in just 55 words.</p>
 				<!-- <a href="#" class="da-link">Read more</a>-->
-			<!--	<div class="da-img"><%#= image_tag('parallax-slider/2.png') %></div>
+				<!--<div class="da-img"><%# image_tag('parallax-slider/2.png') %></div>
 			</div>
 			
 			<nav class="da-arrows">
@@ -33,46 +30,49 @@
 			</nav>
 		</div> -->
 		
-	</div>
+	</div> 
 	<div class="hp-blocks"	>
 		<div class="container">
 			<div class="anounce">
-				<div>FeedFiction is the place to write short stories together with friends.</div>
+				<div><span class="brand">Feed<span>Fiction</span></span> is the place to write short stories together with friends.</div>
 
-				<div>Upload a photo from Facebook, Instagram or your Desktop, start writing 
-				a story, and let your friends continue.</div>
+				<div>Upload a photo from Facebook, Instagram or your Desktop.</div>
+					<div>Start writing a story, and let your friends continue.</div>
 
-
-				<div>FeedFiction is reinventing storytelling in just 55 words.</div>
-
-
-				<div>Sign up with Facebook and start your story.</div>
+					<!-- <div>Sign up with Facebook and start your story.</div> -->
+					
+			 		<span class="sign-in btn-signin-large"></span>
+				 	
+				 	<div class="slogan">FeedFiction is reinventing storytelling in 55 words</div>
+			 
 				
-			 	<span class="sign-in btn-signin-large"></span>
-		 	</div>
+				<!-- <div class="story-panel">
+					<div class="lbl-start-writing hp-labels"></div>
+					<div class="photo-tile"></div>
+					<div class="hp-lbl-container">
+						<div class="lbl-upload-photo hp-labels"></div>
+					 	<div class="lbl-continue hp-labels"></div>
+					</div>
+					
+				</div> -->
+
+
 			
-			<div class="story-panel">
-				<div class="lbl-start-writing hp-labels"></div>
-				<div class="photo-tile"></div>
-				<div class="hp-lbl-container">
-					<div class="lbl-upload-photo hp-labels"></div>
-				 	<div class="lbl-continue hp-labels"></div>
-				</div>
-				
 			</div>
+			
 
-		</div>
 	</div>
 </div>
 	<!-- end: Slider -->
+</div>
 <% end %>
 	
 <!-- start: Hero Unit - Main hero unit for a primary marketing message or call to action -->
-<!-- <div class="hero-unit">
+<!--<div class="hero-unit">
 	<h3>
 		<%#= render 'static_pages/about'%>
 	</h3>
-	<p><a class="btn btn-primary btn-large sign-in">Sign in &raquo;</a></p>
+	<p><a class="btn btn-primary btn-large sign-in">Sign in with Facebook and Start new Story&raquo;</a></p>
 </div> -->
 <!-- end: Hero Unit -->
 
