--- a/app/views/layouts/_start_story_link.html.erb
+++ b/app/views/layouts/_start_story_link.html.erb
@@ -1,3 +1,3 @@
 <% if current_user %>
-<li <%=@enable_class%>><a class="userFunction link" data-function="startStoryModal" alt="Start a Story" title="Start a Story"><i class="mini-ico-pencil mini-white"></i> <span>Start a story</span></a></li>
+<li class="start-new-story"><a class="userFunction link" data-function="startStoryModal" alt="Start new Story" title="Start new Story"><i class="ico-edit ico-white"></i> <!-- <span>Start a story</span> --></a></li>
 <%end%>
