--- a/app/views/stories/_like_actions.html.erb
+++ b/app/views/stories/_like_actions.html.erb
@@ -15,7 +15,7 @@
 		<% end %>
 	<% else %>
 	<span class="like-unregistered">
-		<a href="#like" class="btn btn-small btn-info btn-like unregistered userFunction" data-function="validateLike" unlogged="1">Like</a>
+		<a href="#like" class="btn btn-small btn-info btn-like unregistered userFunction" data-function="validateLike" unlogged="1"><i class="mini-ico-heart mini-white icon-white"></i></a>
 	</span>
 	<% end %>
 	</span>
