--- a/app/views/stories/_like_form.html.erb
+++ b/app/views/stories/_like_form.html.erb
@@ -3,7 +3,7 @@
   <%= f.hidden_field :story_id %>
   <%#= f.submit "Like", class: "btn btn-small btn-info" %>
   <a class="btn btn-small btn-info btn-like" onclick="$('#like-<%=story.id%> form').submit();">
-  	<i class="mini-ico-heart"></i>Like
+  	<i class="mini-ico-heart mini-white icon-white"></i>
   </a>
   <%#link_to 'Like', '#like', class: 'btn btn-small btn-info btn-like' ,:onclick=>"$('#like-#{story.id} form').submit()" do%>
   
