--- a/app/views/stories/_actions.html.erb
+++ b/app/views/stories/_actions.html.erb
@@ -1,7 +1,9 @@
-					<div class="post-meta comments-dashboard">
-						<% if story.comments.size>0%>
-						<span><%=link_to pluralize(story.comments.size, 'Comment'), story_url(story) , id: "comment-count-#{story.id}"%></span>
-						<% end%>
+					<div class="post-meta comments-dashboard actions">
+						<% if story.is_complete %>
+							<% if story.comments.size>0%>
+							<span><%=link_to pluralize(story.comments.size, 'Comment'), story_url(story) , id: "comment-count-#{story.id}"%></span>
+							<% end%>
 						<%= render 'stories/like_actions' , story: story %>
+						<%end%>
 						<%= render 'stories/flag_actions' , story: story %>
 					</div>
