--- a/app/views/stories/_flag_actions.html.erb
+++ b/app/views/stories/_flag_actions.html.erb
@@ -1,6 +1,6 @@
 <% if current_user && @in_story_page %>
 <span class="flag"><%= link_to(new_flag_url(:story_id => story.id), :remote => true, 'data-toggle' => 'modal' ,:class => "btn btn-small btn-danger" , 'data-target' => "#flag-#{story.id}") do %>
-<i class="ico-white mini-ico-flag"></i>Flag
+<i class="mini-ico-flag mini-white "></i>
 <%end%>
 </span>
 <% end %>
