--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -40,8 +40,9 @@
 					<div>Start writing a story, and let your friends continue.</div>
 
 					<!-- <div>Sign up with Facebook and start your story.</div> -->
-					
-			 		<span class="sign-in btn-signin-large"></span>
+					<div class="wrapper-sign-in">
+			 			<span class="sign-in btn-signin-large"></span>
+			 		</div>
 				 	
 				 	<div class="slogan">FeedFiction is reinventing storytelling in 55 words</div>
 			 
