--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,7 +12,9 @@
 			<div class="row">
 
 				<!-- start: Footer Menu Logo -->
-				<%= render 'layouts/logo_nav' %>
+				<div class="logo-footer">
+					<%= render 'layouts/logo_nav' %>
+				</div>
 				<!-- end: Footer Menu Logo -->
 
 				<!-- start: Footer Menu Links-->
