--- a/app/views/layouts/_logo_nav.html.erb
+++ b/app/views/layouts/_logo_nav.html.erb
@@ -1,5 +1,5 @@
 <!--start: Logo -->
-<a href="<%= general_feed_url%>" class="logo-image"></a>
+<a href="<%= general_feed_url%>" class="logo-image"></a><span class="alpha-sign">alpha</span>
 
 
 
