change text in hp

--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -36,8 +36,8 @@
 			<div class="anounce">
 				<div><span class="brand">Feed<span>Fiction</span></span> is the place to write short stories together with friends.</div>
 
-				<div>Upload a photo from Facebook, Instagram or your Desktop.</div>
-					<div>Start writing a story, and let your friends continue.</div>
+				<div>Upload a photo from Facebook, Instagram or your Desktop,
+				start writing a story, and let your friends continue.</div>
 
 					<!-- <div>Sign up with Facebook and start your story.</div> -->
 					<div class="wrapper-sign-in">
