--- a/app/views/feeds/_feed.html.erb
+++ b/app/views/feeds/_feed.html.erb
@@ -9,8 +9,10 @@
 <%= render 'feeds/alpha_disclaimer' %>
 
 
+
 <div id="story-container" >
 	<div id="portfolio-wrapper" class="row">
+	<%= render 'users/friends' %>
 	<%= render :partial => 'stories/story' ,:collection => @stories%>
 	</div>
 </div>
