--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1976,6 +1976,60 @@ ul.commentlist {
 	}
 }
 
+/* Friends to follow cube */
+#friends-to-follow {
+	h2 {
+		border-bottom: 1px dotted;
+		margin: 0 9px 5px;
+	}
+	.span1 {
+		width: 50px;
+		margin-left: 5px;
+	}
+	.span3 {
+		width: 350px;
+		margin-left: 0;
+		position: relative;
+		padding-bottom: 5px;
+	}
+	li {
+
+		div.btn-follow-wrapper {
+			position: absolute;
+			right: 0;
+			top: 0;
+		}
+		form .btn-small {
+
+
+		}
+
+	}
+	
+	div.see-all {
+		position: absolute;
+		top: 10px;
+		right: 18px;
+	}
+}
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Media Queries
 ====================================================================== */
 
