--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Friends#index</h1>
-<p>Find me in app/views/friends/index.html.erb</p>
+<% provide(:title, 'People you may follow') %>
+<section>
+  
+  <%= render 'layouts/title_hr' , :@hr_name => 'People you may follow'%>
+</section>
+<section>
+<div>
+  <%= render 'users/users_to_follow' %>
+ </div>
+  
+</section>
