--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,6 @@
 <li class="span3">
 	
-	<span class="span1"><%= avatar_rounded_medium user %></span>
+	<span class="span1"><%= avatar_rounded user %></span>
 	<span class="label-name"><%= link_to user.name ,user %></span>
 	
 	<%= render 'users/follow_form_wrapper' , :@user => user if current_user %>
