--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,7 +1,7 @@
-<% provide(:title, 'People you may follow') %>
+<% provide(:title, 'Feeders to follow') %>
 <section>
   
-  <%= render 'layouts/title_hr' , :@hr_name => 'People you may follow'%>
+  <%= render 'layouts/title_hr' , :@hr_name => 'Feeders to follow'%>
 </section>
 <section>
 <div>
