--- a/app/views/users/_friends.html.erb
+++ b/app/views/users/_friends.html.erb
@@ -1,6 +1,6 @@
 <% if current_user && @friends && @friends.size > 0%>
 <div class="span4 portfolio-item" id="friends-to-follow" >
-		<h2>People you may follow</h2>
+		<h2>Feeders to follow</h2>
 		<ul>
 			<%= render :partial => 'users/user' , :collection => @friends, :as => :user %>
 		</ul>
