--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1108,6 +1108,11 @@ footer {
 			width: 82%;
 		}
 
+		label.fb-icon {
+			position: relative;
+			top: 8px;
+		}
+
 		div{
 			text-align: right;
 			padding: 5px;
