added facebook activities

--- a/app/assets/javascripts/facebook.js.coffee.erb
+++ b/app/assets/javascripts/facebook.js.coffee.erb
@@ -15,7 +15,7 @@ window.fbAsyncInit = ->
     $('#modal-register').modal('hide')
     FB.login (response) ->
       window.location = '/auth/facebook' if response.authResponse
-    , scope: "user_photos,friends_photos,email, publish_stream"
+    , scope: "user_photos,friends_photos,email"
     
     FB.Event.subscribe "auth.login", (r) ->
       console.log r.status
