--- a/app/views/stories/_like_form.html.erb
+++ b/app/views/stories/_like_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for(current_user.likes.build(story_id: story.id) ) do |f| %>
+<%= form_for(current_user.likes.build(story_id: story.id), remote: true ) do |f| %>
   <%= f.hidden_field :story_id %>
   <%#= f.submit "Like", class: "btn btn-small btn-info" %>
   <a class="btn btn-small btn-info btn-like" onclick="$('#like-<%=story.id%> form').submit();">
