fix meta-data for facebook, fix ui for mobile devices

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2404,6 +2404,16 @@ ul.commentlist {
 		width: 88%;
 	}
 
+	/*Story modal */
+	#StartStoryModal {
+		max-width: 700px;
+		.logo-images {
+			.span2 {
+				width: 170px;
+			}
+		}
+	}
+
 
 }
 
