added favicon + shuffle users

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1498,6 +1498,7 @@ ul.commentlist {
 /* Static Pages */
 .static-pages {
 	margin: 0 auto;
+	margin-top: 80px;
 	text-align: justify;
 	h2 {
 		font-size: 25px;
