--- a/app/views/layouts/static_pages.html.erb
+++ b/app/views/layouts/static_pages.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
-    <%= display_meta_tags :site => full_title(yield(:title))%>
+    <title><%= full_title(@feed_name)%></title>
+    <%= favicon_link_tag %>
     <%= stylesheet_link_tag "application", media: "all" %>
     <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Lobster' >
     
